# FluxPy

./: README.md  pyproject.toml  setup.py
FluxPy/: CFDSolve.py  PDE.py  adm.ipynb  boundaries.py  cylinder.py  inputcylinder.py  interface.py  mesh.py  plotting.py  utils.py
FluxPy/utils/: PDE.py  plotting.py  utils.py
notebooks/: animate.ipynb  bruh.ipynb  inputcylindeρ2.ipynb
tests/: cylinder.py  inputcylinder.py  inputs.py
